# mongosql-auth-c

./: .evg.yml
cmake/: FindMongocCrypto.cmake  FindMongocKerberos.cmake
src/: CMakeLists.txt
